feat(Scenario): Custom Scenarios done.